@@ -1,4 +1,5 @@
 [master]
+    - Fix for bug #1272: JabRef now launches on Mac OS X
     - Updated DBLPfetcher to new DBLP functionality
     - Feature: Ability to reorder the panels in the side pane
     - Feature: Option to save selected entries as plain BibTex without JabRef metadata
